--- a/ajout.css
+++ b/ajout.css
@@ -9,7 +9,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 .container{
     position:relative;
@@ -27,14 +26,13 @@ body{
     font-weight: 600;
     color: #333;
 }
-
 .container header::before{
     content: "";
     position: absolute;
     left: 0;
     bottom: -2px;
     height: 3px;
-    width: 27px;
+    width: 130px;
     border-radius:8px ; 
     background-color:#4070f4 ;
     margin-top:  20px;
@@ -53,9 +51,6 @@ body{
 .container form .détails.id{
     margin-top:10px ;
 }
-
-
-
 .container form .title{
     display: block;
     margin-bottom: 10px;
@@ -70,7 +65,6 @@ body{
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
 form .fields .input-field{
 display: flex;
 width: calc(100% / 3 - 15px);
@@ -79,16 +73,9 @@ margin: 4px 0;
 }
 .input-field .label{
     font-size: 14px;
-    font-weight: 500;
-    
+    font-weight: 500;    
     color: #2e2e2e;
 }
-
-
-.input-field .placeholder {
-    font-size: 20px;
-  }
-
 .input-field input{
     outline: none;
     font-weight: 400;
@@ -108,4 +95,35 @@ box-shadow: 0 3px 6px rgba(0, 0, 0,0.13);
 }
 .input-field input[type="date"]:valid{
     color: #333;
+}
+.container form button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    max-width: 200px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    border-radius: 5px;
+    margin: 25px;    
+    background-color: #4070f4;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
+form button:hover{
+    background-color: #221583;
+}
+form button i{
+    margin: 0 6px;
+}
+form .buttons {
+    display: flex;
+ align-items: center; 
+
+}
+form .buttons button{
+    margin-right: 250px;
+    
 }
