--- a/ajout.css
+++ b/ajout.css
@@ -37,34 +37,59 @@ body{
     background-color:#4070f4 ;
     margin-top:  20px;
 }
+
 .container form{
-     width: 850px;
-  height: auto;
     position: relative;
-    margin-top: 16px;
+    font-size: 16px;
     min-height: 490px;
     background-color: #fff;
+    overflow: hidden;
 }
-.container form .détails{
-    margin-top:25px ;
+.container form .form{
+    position: absolute ;
+    background-color: #fff;
+    transition: 0.3s ease;
 }
-.container form .détails.id{
-    margin-top:10px ;
+
+.container form .form.second{
+opacity: 0;
+pointer-events: none;
+
+transform: translateX(100%);
 }
+
+form.secActive .form.second{
+    opacity: 1;
+    pointer-events: auto ;  
+    transform: translateX(0);
+
+}
+
+form.secActive .form.first{
+    opacity: 0;
+    pointer-events: none ; 
+    transform: translateX(-100%);
+ 
+}
+
+
+
 .container form .title{
     display: block;
     margin-bottom: 10px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
     margin: 6px 0;
     color: #333;
+    
 }
 .container form .fields{
     display: flex;
     align-content: center;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
 }
+
 form .fields .input-field{
 display: flex;
 width: calc(100% / 3 - 15px);
@@ -96,7 +121,7 @@ box-shadow: 0 3px 6px rgba(0, 0, 0,0.13);
 .input-field input[type="date"]:valid{
     color: #333;
 }
-.container form button{
+.container form button, .backBtn1{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -113,29 +138,84 @@ box-shadow: 0 3px 6px rgba(0, 0, 0,0.13);
     transition: all 0.3s linear;
     cursor: pointer;
 }
+.container form button, .backBtn2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    max-width: 200px;
+    width: 100%;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: #fff;
+    border-radius: 5px;
+    margin: 25px;    
+    background-color: #4070f4;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
+
+form button,
+form .backBtn1 i{
+ font-size: 16px;   
+ font-weight: 400;
+}
+
+form .backBtn1 i{
+transform: rotate(180deg);
+}
+
+form .backBtn2 i{
+    transform: rotate(180deg);
+    }
+    
 form button:hover{
     background-color: #221583;
 }
-form button i{
+form button i,
+form .backBtn1 i{
     margin: 0 6px;
 }
-form .buttons {
+form .buttons{
     display: flex;
  align-items: center; 
-
 }
-form .buttons button{
-    margin-right: 250px;
-    
-}
-#myButton {
-    position: absolute;
-    top: 385px;
-    left: 550px;
-  }
 
-  #back{
-    position: absolute;
-    top: 385px;
-    left: 50px;
+form .buttons button .backBtn1{
+    margin-right: 14px;
+    }
+
+  @media (max-width: 750px ) {
+    .container form{
+        overflow-y:scroll ;
+    }
+    .container form::-webkit-scrollbar{
+        display: none;
+    }
+    form .fields .input-field{
+        width: calc(100% / 2 - 15px);    
+    }
   }
+  hr {
+    width: 100%;
+    margin-top:10px ;
+  }
+@media(max-width : 750px){
+    .container form{
+        overflow-y: scroll;
+    }
+    .container form::-webkit-scrollbar{
+        display: none;
+    }
+    form .fields .input-field{              
+        width: calc(100% / 2 - 15px);          
+    }
+}
+@media(max-width:550px){
+    form .fields .input-field{              
+        width: 100%;          
+    }
+}
+
+
